// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms | Separator Separator default 1`] = `
.c1 {
  width: 100%;
  height: 1px;
  background-color: #EBEBE8;
}

.c0 {
  height: 400px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  className="c0"
>
  <div
    className="c1"
  />
</div>
`;

exports[`Storyshots Atoms | Separator Separator vertical 1`] = `
.c1 {
  width: 1px;
  height: 100%;
  background-color: #EBEBE8;
}

.c0 {
  height: 400px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  className="c0"
>
  <div
    className="c1"
  />
</div>
`;
